--- a/github.html
+++ b/github.html
@@ -13,7 +13,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/github-information.js"></script>
-    <title>Rosie</title>
+    <title>Catherine</title>
 </head>
 
 <body>
@@ -23,35 +23,27 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h1 class="name">Catherine Daly</h1>
                         <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer row">
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+                            <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                            <li class="col-xs-6 col-sm-3 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
                                         aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
-                            </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
-                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
-                                        aria-hidden="true"></i><span>Interests</span></a>
-                            </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                            <li class="col-xs-6 col-sm-3 ui-menu-color-github menuitem">
                                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
-                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                            <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem">
+                                <a href="assets/cv/catherine-daly-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
                                         class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
@@ -67,7 +59,7 @@
                 <h5 class="uppercase text-center">You can also search on other user profiles</h5>
 
                 <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <input type="text" id="gh-username" value="ClDaly2904" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
 
@@ -89,7 +81,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/catherine-daly-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -99,46 +91,14 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/catherine-daly-620566229/">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-
     </footer>
 </body>
-
 </html>
